# agent-deck

./: .gitignore  .npmrc  CONTEXT.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.ts  style.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: henry.w@example.net  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/board/: Cargo.toml
crates/board/src/: lib.rs  session_board.rs  slot_allocator.rs  theme.rs
crates/codex/: Cargo.toml
crates/codex/examples/: dispatch_probe.rs  ipc_probe.rs
crates/codex/src/: ipc.rs  lib.rs  mapper.rs  observer.rs  rpc.rs
crates/desktop-e2e/: Cargo.toml  ax_driver.swift
crates/desktop-e2e/src/: fixture.rs  harness.rs  main.rs
crates/host-core/: Cargo.toml
crates/host-core/src/: lib.rs
crates/host-core/tests/: e2e_board_priority.rs  e2e_codex_degrade.rs  e2e_desktop_service.rs  e2e_real_zcode.rs  e2e_zcode_flow.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/workbuddy/: Cargo.toml
crates/workbuddy/examples/: probe.rs
crates/workbuddy/src/: db_meta.rs  lib.rs  mapper.rs  observer.rs
crates/workbuddy/tests/: real_sessions.rs
crates/zcode/: Cargo.toml
crates/zcode/src/: lib.rs  mapper.rs  observer.rs
docs/: action-spec.md  architecture.md  backend-adapters.md  bom.md  ci-cd.md  codex-integration.md  pcb.md  product.md  protocol.md  roadmap.md  rust-rewrite.md  status-model.md  ui-e2e.md  verify.md  workbuddy-integration.md  zcode-integration.md
docs/adr/: 0001-software-console-as-primary-axis.md
firmware/: README.md
hardware/: README.md
schema/: README.md
schema/codex/: ClientRequest.json  CommandExecutionRequestApprovalParams.json  PermissionsRequestApprovalParams.json  PermissionsRequestApprovalResponse.json  README.md  ServerNotification.json  ServerRequest.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
