[package]
name = "agent-deck-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Codex backend: app-server RPC observer + status mapper"

[dependencies]
agent-deck-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
