[package]
name = "agent-deck-host-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Host orchestration: zcode observer + session board"

[dependencies]
agent-deck-protocol = { workspace = true }
agent-deck-board = { workspace = true }
agent-deck-zcode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
tempfile = { workspace = true }
