[package]
name = "agent-deck-workbuddy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WorkBuddy backend: read-only jsonl session observer + mapper"

[dependencies]
agent-deck-protocol = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
